[themes] Fix light theme in staging and history views
In the staging view, give the staged and unstaged tree viewers a white
background when active. The light gray default background makes them
look inactive, especially since the commit message StyledText behaves
like an editor and has the configured editor background, which is white
by default.

In the history view, remove the gap between the commit message and the
diff part, and also change the background on the commit message to
white. The light gray reduces contrast with the gray text used for the
commit headers too much.

In the dark theme, override this with more specific selectors that set
"background-color: inherit" to get the default dark theme behavior.
The selectors must be more specific because the egit.css is loaded for
*all* themes as it has no themeId in the pom.xml. With selectors of
equal specificity the backgrounds would remain white also in the dark
theme, which don't want of course.

Note that since commit 42fa76d6e, the EGit baseline is Eclipse 4.36
(2025-06), so compatibility of these styling changes with earlier
Eclipse themes is not an issue anymore. EGit 7.4.0 will not be
installable on older Eclipses.

Bug: egit-57

--- a/org.eclipse.egit.ui/css/egit.css
+++ b/org.eclipse.egit.ui/css/egit.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018 Thomas Wolf <thomas.wolf@paranor.ch>
+ * Copyright (c) 2018, 2025 Thomas Wolf <twolf@apache.org> and others
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -11,4 +11,23 @@
 
 Text.org-eclipse-egit-ui-FindToolbar-noResults {
 	background-color: #FF9696;
+}
+
+/*
+ * Restore the background of the staged and unstaged items viewers. The light gray
+ * background indicates an inactive view, but if it is active, we want these viewers
+ * show "active". With gray, it looks particularly jarring in the staging view because
+ * the commit message StyledText follows the editor background, which is normally
+ * white in the light theme.
+ */
+.MPartStack.active .MPart Form Composite Section Tree.org-eclipse-egit-ui-StagingView {
+	background-color: #FFFFFF;
+}
+
+/*
+ * Restore contrast in the CommitAndDiffComponent. The new light gray background
+ * doesn't go well with the gray commit message headers.
+ */
+.MPart ScrolledComposite StyledText.org-eclipse-egit-ui-CommitAndDiffComponent {
+	background-color: #FFFFFF;
 }
